# SMART_BANKING

./: README.md  app.py  main.py  pyproject.toml
src/api/v1/agent/: agent.py
src/api/v1/routes/: query.py  upload.py
src/api/v1/schemas/: query_schema.py
src/api/v1/services/: query_services.py
src/api/v1/tools/: fts_tool.py  hybrid_search_tool.py  nl2sql_tool.py  vector_search_tool.py
src/core/: db.py
src/ingestion/: docling_parser.py  ingestion.py
