[project]
name = "smart-banking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=6.1.0",
    "docling>=2.88.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.1.6",
    "psycopg[binary]>=3.3.3",
    "python-multipart>=0.0.26",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]
